--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,8 +2,8 @@
   border-radius: 3rem;
 }
 /* kanit-regular - thai */
-body{
-    font-family: "Kanit";
+body {
+  font-family: "Kanit", sans-serif;
 }
 
 @font-face {
